# gate_os

./: GNUmakefile  limine.conf  shell.nix  todo.md
.cargo/: config.toml
crates/e9/src/: lib.rs
crates/goalloc/: Cargo.toml
kern/: Cargo.toml
kern/src/: console.rs  gdt.rs  kdebug.rs  main.rs  serial.rs
kernel/: Cargo.toml  GNUmakefile
kernel/src/: allocator.rs  debug.rs  exception_handlers.rs  framebuffer.rs  gdt.rs  idt.rs  logger.rs  main.rs  panic.rs
kernel/src/arch/x86_64/: framebuffer.rs  gdt.rs  mod.rs
