[package]
name = "limine-rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
spin = "0.9"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
conquer-once = { version = "0.4.0", default-features = false }
pc-keyboard = "0.8.0"
ps2-mouse = "0.1.4"
log = "0.4.22"
uart_16550 = "0.3.1"
vte = "0.13.0"
owo-colors = "4.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
limine = "0.3.1"
x86_64 = "0.15.1"
pic8259 = "0.11.0"
rustc-demangle = "0.1.24"
unwinding = { version = "0.2.2", default-features = false, features = ["unwinder", "fde-static", "personality", "panic", "dwarf-expr", "hide-trace"] }
xmas-elf = "0.9.1"
os_units = "0.4.2"
e9 = { path = "../crates/e9" }

[profile.dev]
panic = 'abort'

[profile.release]
panic = 'abort'