[package]
name = "limine-rust-template"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.3.0"
x86_64 = "0.15.1"
pic8259 = "0.11.0"

spin = "0.9"
lazy_static = { version = "1.5", features = ["spin_no_std"] }
conquer-once = { version = "0.4.0", default-features = false }

pc-keyboard = "0.7.0"
ps2-mouse = "0.1.4"

embedded-graphics = "0.8.1"
embedded-graphics-core = "0.4.0"
embedded-text = { version="0.7.0", features = ["ansi"]}
noto-sans-mono-bitmap = "0.3.0"
tinyqoi = "0.2.0"

log = "0.4.22"